# instant_crud_docs

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  refresh.sh
docs/en/: conf.py  index.rst
docs/en/_build/gettext/: index.pot  overview.en.pot  overview.it.pot
docs/en/_build/gettext/.doctrees/: environment.pickle  index.doctree  overview.en.doctree  overview.it.doctree
docs/en/locale/it/LC_MESSAGES/: index.mo  index.po  overview.en.mo  overview.en.po  overview.it.mo  overview.it.po
docs/en/locale/pot/: index.pot  overview.en.pot
docs/en/locale/pot/.doctrees/: environment.pickle  index.doctree  overview.en.doctree
docs/it/: .readthedocs.yaml  conf.py  index.rst  overview.it.md
docs/it/_build/gettext/: index.pot  overview.en.pot  overview.it.pot
docs/it/_build/gettext/.doctrees/: environment.pickle  index.doctree  overview.en.doctree  overview.it.doctree
docs/it/locale/en/LC_MESSAGES/: index.mo  index.po  overview.en.po  overview.it.mo  overview.it.po
docs/it/locale/it/LC_MESSAGES/: overview.it.po
docs/it/locale/pot/: index.pot  overview.it.pot
docs/it/locale/pot/.doctrees/: environment.pickle  index.doctree  overview.it.doctree
docs/source/: conf.py  index.rst
instant_crud_docs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
source/: conf.py  overview.md
